[20230901_Layout] - esLint, Prettier, StyleLint 적용 - 폴더구조 생성 - webpack -> publicPath / src경로 alias / assets 폴더 빌드파일로 카피 - tsconfig -> src경로 paths alias 적용 - Container, ContainerInner 레이아웃 컴포넌트 구현 - FileUploader 레이아웃 컴포넌트 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "strict": true,
     "jsx": "react-jsx",
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "exclude": ["node_modules"]
 }
