--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,11 @@
 {
   "presets": [
     ["@babel/preset-react",{"runtime": "automatic"}],
+    ["@babel/preset-env",{
+      "targets": {
+        "node": "current"
+      }
+    }],
     "@babel/preset-typescript"
   ]
 }
