--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "jsx": "react-jsx",
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": ["./src/*"]
     }
