[feature/Sprite 생성 기능 구현] - SpriteArea 레이아웃 구현 - LinkedList 구현 - Rect 타입 구현 - Canvas 영역에 이미지 채우는 알고리즘 구현(진행중)    - 영역 나누는 함수 구현    - 이미지가 전체 캔버스 영역 넘어갈때 Width, Height 조정하는 기능 구현중    - 곂치는 영역 구하는 함수 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "lib": [
+      "esnext","es5","dom"
+    ],
     "paths": {
       "@/*": ["./src/*"]
     }
