[feature/Sprite 생성 기능 구현]    - Canvas 영역에 이미지 채우는 알고리즘 구현 -> 이미지에 따른 캔버스 크기조절 이슈 해결    - 초기 이미지 크기별로 정렬 후 삽입    - 캔버스에 배경으로 바둑판 배열 이미지 세팅    - 이미지 삭제 기능 추가    - 파일 리스트 파일 타입 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "esnext","es5","dom"
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "public/*": ["./public/*"]
     }
   },
   "exclude": ["node_modules"]
